--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 							</ul>
 						</nav>
 					</div>
-					<h2><span>Hello!</span> Welcome to my small corner of the Internet. </h2>
+						
+					<h2><p>Hello World!</p> and welcome to my small corner of the Internet. </h2>
+
 				</div>
 		</header>
 	<main>	
