Changed contact photo and icons

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Eric Zavala | Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -80,7 +81,7 @@
 		<footer id="contact">
 			<div class="full-width">
 				<div class="half-width">
-					<img src="img/contact.png" alt="Contact img" id="contact-img">
+					<img src="img/ejz-portrait.jpg" alt="Contact img" id="contact-img">
 				</div>
 				<div class="half-width">
 					<h2>Like what your see?</h2>
