--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 					<img src="img/icon-html.png" alt="HTML icon"/>
 					<h3>Hand-Coded HTML</h3>
 					<p>
-						My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is easy to read, easy to collaborate, trouble-shoot and accessible.
+						My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is well organized and follows current web standards. Naming conventions of classes, ids, and content are kept concise and readable.
 					</p>
 				</div>
 				<div class="third-width">
 					<img src="img/icon-css.png" alt="CSS icon"/>
 					<h3>Well-Organized CSS</h3>
 					<p>
-						I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS lean and fast to load, and I make it a habit to stay up to date on current best practices.
+						I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS formatted from top to bottom my page, while providing comments to separate each piece of content that is being styled.
 					</p>
 				</div>
 				<div class="third-width">
