Modified icons and index.html

--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 		<section id="skills">
 			<div class="full-width">
 				<div class="third-width">
-					<img src="img/icon-html.png" alt="HTML icon"/>
+					<img src="img/html-icon.png" alt="HTML icon"/>
 					<h3>Hand-Coded HTML</h3>
 					<p>
 						My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is well organized and follows current web standards. Naming conventions of classes, ids, and content are kept concise and readable.
 					</p>
 				</div>
 				<div class="third-width">
-					<img src="img/icon-css.png" alt="CSS icon"/>
+					<img src="img/css-icon.png" alt="CSS icon"/>
 					<h3>Well-Organized CSS</h3>
 					<p>
 						I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS formatted from top to bottom my page, while providing comments to separate each piece of content that is being styled.
 					</p>
 				</div>
 				<div class="third-width">
-					<img src="img/icon-pencil.png" alt="Pencil icon"/>
+					<img src="img/psd-icon.png" alt="Pencil icon"/>
 					<h3>Ease Converting Designs into Code</h3>
 					<p>
 						You can trust me to take a designer's PSD and quickly & accurately convert it into a webpage that is pixel-perfect match.
