Modified width styles in css

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
 					<img src="img/ejz-portrait.jpg" alt="Contact img" id="contact-img">
 				</div>
 				<div class="half-width">
-					<h2>Like what your see?</h2>
+					<h2>Would you like to find out more?</h2>
 					<h3 id="email-header">
 					Feel free to send a message:
 					</h3>
 					<img src="img/icon-envelope.png" alt="Email icon" id="envelope"/>
 						<a href="mailto:ejzavala00@gmail.com">ejzavala00@gmail.com</a>
 					
-					<h3 id="socialmedia-header">Or, find me on the interwebs</h3>
+					<h3 id="socialmedia-header">Or, find me on the social media</h3>
 					<ul>
 					
 						<li>
